# linked_list

./: CMakeLists.txt  makefile
src/: linked_list.c  linked_list.h  main.c  node.c  node.h
